--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -1,4 +1,10 @@
 ---
+grails:
+    gorm:
+        multiTenancy:
+            mode: DISCRIMINATOR
+            tenantResolverClass: org.grails.datastore.mapping.multitenancy.web.SubDomainTenantResolver
+
 hibernate:
     cache:
         queries: false
